add dependecies in config.yml

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2196,3 +2196,11 @@ update_configs:
         dependency_name: demisto/*
         update_type: all
 
+  - package_manager: docker
+    directory: /docker/feed-performance-test
+    update_schedule: daily
+    automerged_updates:
+    - match:
+        dependency_name: demisto/*
+        update_type: all
+
