revised to have ansible package ranges

--- a/docker/ansible-runner/Pipfile
+++ b/docker/ansible-runner/Pipfile
@@ -7,9 +7,9 @@ verify_ssl = true
 
 [packages]
 psutil = "*"
-ansible-runner = "*"
+ansible-runner = "1.4.7"
 paramiko = "*"
-ansible = "==2.10.7"
+ansible = ">=2.10.7,<2.11.0"
 ssh-agent-setup = "*"
 pywinrm = "*"
 hcloud = "*"
