--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2215,3 +2215,17 @@ update_configs:
     - match:
         dependency_name: demisto/*
         update_type: all
+  - package_manager: python
+    directory: /docker/bs4-tld
+    update_schedule: live
+    automerged_updates:
+    - match:
+        update_type: semver:minor
+  - package_manager: docker
+    directory: /docker/bs4-tld
+    update_schedule: daily
+    automerged_updates:
+    - match:
+        dependency_name: demisto/*
+        update_type: all
+
