Adding packages to support distilled BERT model to fetch-data docker

--- a/docker/fetch-data/Pipfile
+++ b/docker/fetch-data/Pipfile
@@ -10,6 +10,9 @@ pandas = "*"
 bs4 = "*"
 nltk = "*"
 tabulate = "*"
+transformers = "*"
+onnx = "*"
+onnxruntime = "*"
 
 [requires]
 python_version = "3.7"
