--- a/docker/feed-html-parser/Pipfile
+++ b/docker/feed-html-parser/Pipfile
@@ -5,8 +5,9 @@ name = "pypi"
 
 [packages]
 feedparser = "*"
+beautifulsoup4 = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
