Moving unzipping of tokenizer dict to build docker

--- a/docker/fetch-data/Dockerfile
+++ b/docker/fetch-data/Dockerfile
@@ -3,6 +3,10 @@ COPY ./distilledbert-base-uncased /distilledbert-base-uncased
 RUN cat /distilledbert-base-uncased/aa.onnx /distilledbert-base-uncased/ab.onnx /distilledbert-base-uncased/ac.onnx /distilledbert-base-uncased/ad.onnx > /distilbert-base-uncased.onnx
 RUN rm -r /distilledbert-base-uncased
 
+COPY ./distilled_bert_base_uncased_tokenizer.zip /distilled_bert_base_uncased_tokenizer.zip
+RUN unzip /distilled_bert_base_uncased_tokenizer.zip -d / \
+&& rm /distilled_bert_base_uncased_tokenizer.zip
+
 
 FROM demisto/python3-deb:3.9.5.21272
 
@@ -29,8 +33,7 @@ COPY ./word_to_ngram.p /ml/word_to_ngram.p
 COPY ./word_to_regex.p /ml/word_to_regex.p
 
 COPY --from=files-src /distilbert-base-uncased.onnx /ml/distilbert-base-uncased.onnx
+COPY --from=files-src /distilbert-base-uncased_tokenizer /ml/distilbert-base-uncased_tokenizer
 
-COPY ./distilled_bert_base_uncased_tokenizer.zip /ml/distilled_bert_base_uncased_tokenizer.zip
-RUN apt-get install unzip && unzip /ml/distilled_bert_base_uncased_tokenizer.zip -d /ml && rm /ml/distilled_bert_base_uncased_tokenizer.zip
 
 RUN chown -R demisto:demisto /ml && chmod -R 775 /ml
