Fixing homebrew role

--- a/docker/tidy/Dockerfile
+++ b/docker/tidy/Dockerfile
@@ -12,5 +12,5 @@ RUN apk --update add --no-cache --virtual .build-dependencies \
 RUN apk --update add --no-cache openssl ca-certificates sshpass openssh-client rsync
 
 RUN ansible-galaxy install -c elliotweiser.osx-command-line-tools
-RUN ansible-galaxy install -c geerlingguy.homebrew
+RUN ansible-galaxy collection install -c geerlingguy.mac
 RUN ansible-galaxy install -c ctorgalson.oh-my-zsh,v2.2.2
