--- a/docker/tidy/ansible/playbook-homebrew.yml
+++ b/docker/tidy/ansible/playbook-homebrew.yml
@@ -2,7 +2,7 @@
 - name: Homebrew
   hosts: all
   roles:
-    - role: geerlingguy.homebrew
+    - role: geerlingguy.mac.homebrew
       vars:
         homebrew_cask_apps: "{{ homebrew_cask_apps }}"
         homebrew_installed_packages: "{{ homebrew_installed_packages }}"
