--- a/docker/ansible-runner/Pipfile
+++ b/docker/ansible-runner/Pipfile
@@ -12,10 +12,10 @@ paramiko = "*"
 ansible = ">=2.10.7,<2.11.0"
 ssh-agent-setup = "*"
 pywinrm = "*"
-hcloud = "*"
-pyvmomi = "*"
-openshift = "*"
-kubernetes = "*"
+hcloud = "==1.12.0"
+pyvmomi = "==7.0.2"
+openshift = "==0.12.0"
+kubernetes = "==12.0.1"
 dnspython = "*"
 footmark = "*"
 azure-cli-core = "==2.11.1"
