--- a/docker/sane-pdf-reports/Dockerfile
+++ b/docker/sane-pdf-reports/Dockerfile
@@ -1,4 +1,4 @@
-# Last modified: Sun, 6 Jun 2021 09:52:38 +0200
+# Last modified: Tuesday, 6 July 2021
 FROM demisto/python3-deb:3.9.5.21272
 
 WORKDIR "/app"
