added to known_licenses.json

--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -80,7 +80,10 @@
         "MicrosoftTeams": {
             "license": "License :: MIT License",
             "url": "https://raw.githubusercontent.com/MicrosoftDocs/office-docs-powershell/master/teams/LICENSE.txt"
+        },
+        "PSWSMan": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/jborean93/omi/blob/master/LICENSE"
         }
-
     }
 }
