new pwsh ubuntu 18 image

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -368,6 +368,10 @@ update_configs:
     update_schedule: daily
 
   - package_manager: docker
+    directory: /docker/powershell-ubuntu-18.04
+    update_schedule: daily
+
+  - package_manager: docker
     directory: /docker/pwsh-remoting
     update_schedule: daily
 
