fix keyserver and comment out fix to see failure of verify.py

--- a/docker/py-ews/Dockerfile
+++ b/docker/py-ews/Dockerfile
@@ -46,7 +46,7 @@ RUN set -ex \
 	&& wget -O python.tar.xz.asc "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz.asc" \
 	&& export GNUPGHOME="$(mktemp -d)" \
 	&& echo "disable-ipv6" >> ${GNUPGHOME}/dirmngr.conf \
-	&& gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$GPG_KEY" \
+	&& gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$GPG_KEY" \
 	&& gpg --batch --verify python.tar.xz.asc python.tar.xz \
 	&& { command -v gpgconf > /dev/null && gpgconf --kill all || :; } \
 	&& rm -rf "$GNUPGHOME" python.tar.xz.asc \
@@ -206,16 +206,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Handling the issue described here https://askubuntu.com/questions/1233186/ubuntu-20-04-how-to-set-lower-ssl-security-level 
 # by using TLS v1 to support old exchange servers
-RUN echo 'openssl_conf = default_conf' | cat - /etc/ssl/openssl.cnf > temp-ssl.cnf \
-&& mv temp-ssl.cnf /etc/ssl/openssl.cnf \
-&& echo " \
-[default_conf] \
-ssl_conf = ssl_sect \
-\
-[ssl_sect] \
-system_default = system_default_sect \
-\
-[system_default_sect] \
-MinProtocol = TLSv1 \
-CipherString = DEFAULT@SECLEVEL=1 \
-" >> /etc/ssl/openssl.cnf
+# RUN echo 'openssl_conf = default_conf' | cat - /etc/ssl/openssl.cnf > temp-ssl.cnf \
+# && mv temp-ssl.cnf /etc/ssl/openssl.cnf \
+# && echo " \
+# [default_conf] \
+# ssl_conf = ssl_sect \
+# \
+# [ssl_sect] \
+# system_default = system_default_sect \
+# \
+# [system_default_sect] \
+# MinProtocol = TLSv1 \
+# CipherString = DEFAULT@SECLEVEL=1 \
+# " >> /etc/ssl/openssl.cnf
