--- a/docker/ml/Pipfile
+++ b/docker/ml/Pipfile
@@ -1,4 +1,4 @@
-[[source]]
+./[[source]]
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
@@ -18,6 +18,7 @@ dill = "*"
 catboost = "*"
 eli5 = "*"
 torch = "*"
+langdetect = "*"
 
 [dev-packages]
 
