langdetect added, python 3.7

--- a/docker/ml/Pipfile
+++ b/docker/ml/Pipfile
@@ -18,8 +18,9 @@ dill = "*"
 catboost = "*"
 eli5 = "*"
 torch = "*"
+langdetect = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
