fixing verify trying to reduce docker size by copying files from build docker

--- a/docker/ml/Dockerfile
+++ b/docker/ml/Dockerfile
@@ -1,3 +1,9 @@
+FROM alpine:3.12.3 as files-src
+RUN mkdir /ml
+COPY ./encrypted_model.b /ml/encrypted_model.b
+COPY ./oob_evaluation.txt /ml/oob_evaluation.txt
+RUN chmod -R 775 /ml
+
 FROM demisto/python3-deb:3.9.5.21272
 
 COPY requirements.txt .
@@ -10,13 +16,12 @@ RUN apt-get update \
 && apt-get purge -y --auto-remove gcc \
   python3-dev gfortran wget git g++ pkg-config libhdf5-dev
 COPY demisto_ml-0.2.tar.gz .
-RUN pip install demisto_ml-0.2.tar.gz
 RUN rm -rf /var/lib/apt/lists/*
 RUN python -m spacy download en_core_web_sm
 RUN mkdir /ml
 RUN python -c "import nltk; nltk.download('stopwords', download_dir='/ml/nltk_data'); nltk.download('punkt',download_dir='/ml/nltk_data')"
 ENV NLTK_DATA='/ml/nltk_data'
 ENV MPLCONFIGDIR='/ml/matplotlib'
-COPY encrypted_model.b /ml
-COPY oob_evaluation.txt /ml
 RUN chown -R demisto:demisto /ml && chmod -R 775 /ml
+COPY --from=files-src --chown=demisto:demisto /ml /ml
+RUN pip install demisto_ml-0.2.tar.gz
