--- a/docker/tesseract/Dockerfile
+++ b/docker/tesseract/Dockerfile
@@ -6,20 +6,23 @@ RUN apt-get update && apt-get -t buster-backports install -y --no-install-recomm
   && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update && apt-get -t buster-backports install -y --no-install-recommends \
-  tesseract-ocr-deu \
-  tesseract-ocr-fra \
-  tesseract-ocr-heb \
-  tesseract-ocr-ita \
-  tesseract-ocr-spa \
-  tesseract-ocr-rus \
-  tesseract-ocr-tur \
   tesseract-ocr-ara \
   tesseract-ocr-chi-sim \
   tesseract-ocr-chi-sim-vert \
   tesseract-ocr-chi-tra \
   tesseract-ocr-chi-tra-vert \
+  tesseract-ocr-deu \
+  tesseract-ocr-fra \
+  tesseract-ocr-heb \
+  tesseract-ocr-ita \
   tesseract-ocr-jpn \
   tesseract-ocr-jpn-vert \
+  tesseract-ocr-pol \
+  tesseract-ocr-por \
+  tesseract-ocr-rus \
+  tesseract-ocr-spa \
+  tesseract-ocr-swe \
+  tesseract-ocr-tur \
   && tesseract --version \
   && rm -rf /var/lib/apt/lists/*
 
