--- a/docker/ml/Dockerfile
+++ b/docker/ml/Dockerfile
@@ -1,3 +1,8 @@
+FROM alpine:3.12.3 as files-src
+RUN mkdir /ml
+COPY ./encrypted_model.b /ml/encrypted_model.b
+RUN chmod -R 775 /ml
+
 FROM demisto/python3-deb:3.9.5.21272
 
 COPY requirements.txt .
@@ -17,6 +22,6 @@ RUN mkdir /ml
 RUN python -c "import nltk; nltk.download('stopwords', download_dir='/ml/nltk_data'); nltk.download('punkt',download_dir='/ml/nltk_data')"
 ENV NLTK_DATA='/ml/nltk_data'
 ENV MPLCONFIGDIR='/ml/matplotlib'
-COPY encrypted_model.b /ml
 COPY oob_evaluation.txt /ml
 RUN chown -R demisto:demisto /ml && chmod -R 775 /ml
+COPY --from=files-src --chown=demisto:demisto /ml /ml
