--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,13 @@ jobs:
       - store_artifacts:
           path: artifacts
           destination: docker_images
+      - run:
+          name: Build Ironbank Docker Images
+          command: |
+            ./ironbank/build_ironbank_docker.sh
+      - store_artifacts:
+          path: artifacts
+          destination: ironbank_docker_images
 workflows:
   version: 2
   full_build:
