--- a/docker/pwsh-azure/Dockerfile
+++ b/docker/pwsh-azure/Dockerfile
@@ -2,5 +2,5 @@
 FROM demisto/powershell:7.1.3.20923
 
 RUN pwsh -c "Set-PSRepository -Name PSGallery -InstallationPolicy Trusted -ErrorAction Stop"
-RUN pwsh -c "Install-Module -ErrorAction Stop Az -Scope AllUsers""
+RUN pwsh -c "Install-Module -ErrorAction Stop Az -Scope AllUsers"
 
