--- a/docker/ansible-runner/Pipfile
+++ b/docker/ansible-runner/Pipfile
@@ -64,6 +64,7 @@ azure-mgmt-recoveryservicesbackup = "==0.6.0"
 azure-mgmt-eventhub = "==2.0.0"
 requests-ntlm = "==1.1.0"
 PyYAML = "==5.4.1"
+vsphere-automation-sdk = {file = "https://github.com/vmware/vsphere-automation-sdk-python/archive/v7.0.1.0.tar.gz"}
 
 [requires]
 python_version = "3.7"
