--- a/docker/mlurlphishing/Dockerfile
+++ b/docker/mlurlphishing/Dockerfile
@@ -1,8 +1,16 @@
 
-FROM demisto/python3:3.9.6.22912
+FROM demisto/python3-deb:3.9.6.22912
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
-  && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies
+RUN apt-get update \
+&& apt-get install -y --no-install-recommends \
+  gcc cmake\
+  python3-dev gfortran wget git g++ pkg-config libhdf5-dev \
+&& pip install --no-cache-dir -r requirements.txt \
+&& apt-get purge -y --auto-remove gcc \
+  python3-dev gfortran wget git g++ pkg-config libhdf5-dev cmake
+
+
+
+
