--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2285,3 +2285,11 @@ update_configs:
         dependency_name: demisto/*
         update_type: all
 
+  - package_manager: docker
+    directory: /docker/python3-arrow
+    update_schedule: daily
+    automerged_updates:
+    - match:
+        dependency_name: demisto/*
+        update_type: all
+
