--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2293,3 +2293,9 @@ update_configs:
         dependency_name: demisto/*
         update_type: all
 
+  - package_manager: python
+    directory: /docker/python3-arrow
+    update_schedule: live
+    automerged_updates:
+    - match:
+        update_type: semver:minor
