updated to py3.9 and allowed compatible modules

--- a/docker/ansible-runner/Pipfile
+++ b/docker/ansible-runner/Pipfile
@@ -6,18 +6,18 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-psutil = "==5.8.0"
-ansible-runner = "==1.4.7"
-paramiko = "==2.7.2"
+psutil = "~=5.8.0"
+ansible-runner = "~=1.4.7"
+paramiko = "~=2.7.2"
 ansible = ">=2.10.7,<2.11.0"
-ssh-agent-setup = "==1.0.1"
-pywinrm = "==0.4.2"
-hcloud = "==1.12.0"
-pyvmomi = "==7.0.2"
-openshift = "==0.12.1"
-kubernetes = "==12.0.1"
-dnspython = "==2.1.0"
-footmark = "==1.20.0"
+ssh-agent-setup = "~=1.0.1"
+pywinrm = "~=0.4.2"
+hcloud = "~=1.12.0"
+pyvmomi = "~=7.0.2"
+openshift = "~=0.12.1"
+kubernetes = "~=12.0.1"
+dnspython = "~=2.1.0"
+footmark = "~=1.20.0"
 azure-cli-core = "==2.11.1"
 azure-cli-nspkg = "==3.0.2"
 azure-common = "==1.1.11"
@@ -62,9 +62,9 @@ azure-mgmt-iothub = "==0.7.0"
 azure-mgmt-recoveryservices = "==0.4.0"
 azure-mgmt-recoveryservicesbackup = "==0.6.0"
 azure-mgmt-eventhub = "==2.0.0"
-requests-ntlm = "==1.1.0"
-PyYAML = "==5.4.1"
+requests-ntlm = "~=1.1.0"
+PyYAML = "~=5.4.1"
 vsphere-automation-sdk = {file = "https://github.com/vmware/vsphere-automation-sdk-python/archive/v7.0.1.0.tar.gz"}
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
