--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,23 @@ jobs:
           path: artifacts
           destination: docker_images
       - run:
+          name: Run Ironabnk Unit Tests
+          command: |
+            if [[ ! $(which pyenv) ]] && [[ -n "${CIRCLECI}" ]]; then 
+                echo "pyenv not found. setting up necessary env for pyenv on circle ci";\
+                export PATH="$HOME/.pyenv/bin:$PATH"
+                eval "$(pyenv init -)"
+            fi
+            
+            pyenv versions
+            pyenv local 3.9.0
+            pip install pipenv==2021.5.29
+            pipenv install --dev
+            pipenv run pytest ironbank -v
+      - run:
           name: Build Ironbank Docker Images
           command: |
-            ./ironbank/build_ironbank_docker.sh
+            pipenv run ./ironbank/build_ironbank_docker.sh --python 3.9
       - store_artifacts:
           path: artifacts
           destination: ironbank_docker_images
