ansible-runner license

--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -84,6 +84,10 @@
         "PSWSMan": {
             "license": "License :: MIT License",
             "url": "https://github.com/jborean93/omi/blob/master/LICENSE"
+        },
+        "ansible-runner": {
+            "license": "License :: Apache License 2.0",
+            "url": "https://github.com/ansible/ansible-runner/blob/devel/LICENSE.md"
         }
     }
 }
