added ssdeep to crypto docker

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2299,3 +2299,31 @@ update_configs:
     automerged_updates:
     - match:
         update_type: semver:minor
+  - package_manager: python
+    directory: /.
+    update_schedule: live
+    automerged_updates:
+    - match:
+        update_type: semver:minor
+  - package_manager: docker
+    directory: /.
+    update_schedule: daily
+    automerged_updates:
+    - match:
+        dependency_name: demisto/*
+        update_type: all
+
+  - package_manager: python
+    directory: /docker/ssdeep
+    update_schedule: live
+    automerged_updates:
+    - match:
+        update_type: semver:minor
+  - package_manager: docker
+    directory: /docker/ssdeep
+    update_schedule: daily
+    automerged_updates:
+    - match:
+        dependency_name: demisto/*
+        update_type: all
+
