add msal-extensions to know licenses

--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -84,6 +84,10 @@
         "PSWSMan": {
             "license": "License :: MIT License",
             "url": "https://github.com/jborean93/omi/blob/master/LICENSE"
+        },
+        "msal-extensions": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/AzureAD/microsoft-authentication-library-for-python/blob/dev/LICENSE"
         }
     }
 }
