--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -92,6 +92,50 @@
         "ansible-runner": {
             "license": "License :: Apache License 2.0",
             "url": "https://github.com/ansible/ansible-runner/blob/devel/LICENSE.md"
+        },
+        "nsx-policy-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "nsx-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "nsx-policy-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "vapi-client-bindings": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "vmc-client-bindings": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "vmc-draas-client-bindings": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "vapi-runtime": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "nsx-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "nsx-policy-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "nsx-vmc-policy-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "nsx-vmc-aws-integration-python-sdk": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
         }
     }
 }
