--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -136,6 +136,10 @@
         "nsx-vmc-aws-integration-python-sdk": {
             "license": "License :: MIT License",
             "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
+        "portalocker": {
+            "license": "License :: PSF License",
+            "url": "https://github.com/WoLpH/portalocker/blob/develop/LICENSE"
         }
     }
 }
