known license is lowercase

--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -138,7 +138,7 @@
             "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
         },
         "portalocker": {
-            "license": "License :: PSF License",
+            "license": "License :: PSF license",
             "url": "https://github.com/WoLpH/portalocker/blob/develop/LICENSE"
         }
     }
