--- a/docker/known_licenses.json
+++ b/docker/known_licenses.json
@@ -137,6 +137,10 @@
             "license": "License :: MIT License",
             "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
         },
+        "vapi-common-client": {
+            "license": "License :: MIT License",
+            "url": "https://github.com/vmware/vsphere-automation-sdk-python/blob/master/LICENSE"
+        },
         "portalocker": {
             "license": "License :: PSF license",
             "url": "https://github.com/WoLpH/portalocker/blob/develop/LICENSE"
