fixng the way we calculate the base image and base image tag

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 "ruamel.yaml" = "*"
 requests = "*"
 dockerfile_parse = "*"
+pyyaml = "*"
+regex = "*"
 
 [dev-packages]
 pytest = "*"
