Fix package name

--- a/docker/reversinglabs-sdk-py3/Pipfile
+++ b/docker/reversinglabs-sdk-py3/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 reversinglabs-sdk-py3 = "*"
-rl-threat-hunting = {editable = true, ref = "421208a330d7a9813270485a5d57bd0a52f83a54", git = "https://github.com/reversinglabs/threat_hunting_library.git"}
+python-rl-threat-hunting = {editable = true, ref = "421208a330d7a9813270485a5d57bd0a52f83a54", git = "https://github.com/reversinglabs/threat_hunting_library.git"}
 
 [dev-packages]
 
