--- a/docker/mlurlphishing/Dockerfile
+++ b/docker/mlurlphishing/Dockerfile
@@ -1,5 +1,8 @@
 FROM demisto/python3-deb:3.9.6.22912
 
+RUN mkdir /model
+COPY ./model_docker.pkl /model/model_docker.pkl
+RUN chmod -R 775 /model
 COPY requirements.txt .
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
