--- a/docker/mlurlphishing/Pipfile
+++ b/docker/mlurlphishing/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-opencv-python = "*"
+opencv-python = "==4.5.2.52"
 scikit-learn = "*"
 pandas = "*"
 beautifulsoup4 = "*"
