lock pkg version

--- a/docker/content-code-check/Pipfile
+++ b/docker/content-code-check/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-google-cloud-storage = "1.29.0"
+google-cloud-storage = "*"
 gitpython = "*"
 packaging = "*"
 
