--- a/docker/btfl-soup/Dockerfile
+++ b/docker/btfl-soup/Dockerfile
@@ -4,5 +4,5 @@ FROM demisto/python3:3.9.6.22912
 COPY requirements.txt .
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
-  && pip install --no-cache-dir -r requirements.txt \
+  && pip install --no-cache-dir -r  .txt \
   && apk del .build-dependencies
