--- a/docker/content-code-checks/Dockerfile
+++ b/docker/content-code-checks/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   gcc \
   python3-dev \
 && pip install --no-cache-dir -r requirements.txt \
+&& apt-get install git \
 && apt-get purge -y --auto-remove \
   gcc \
   python3-dev \
