--- a/docker/content-code-checks/Dockerfile
+++ b/docker/content-code-checks/Dockerfile
@@ -6,8 +6,8 @@ COPY requirements.txt .
 RUN apt-get update && apt-get install -y --no-install-recommends \
   gcc \
   python3-dev \
+  git \
 && pip install --no-cache-dir -r requirements.txt \
-&& apt-get install git \
 && apt-get purge -y --auto-remove \
   gcc \
   python3-dev \
