--- a/docker/reversinglabs-sdk-py3/Pipfile
+++ b/docker/reversinglabs-sdk-py3/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 reversinglabs-sdk-py3 = "*"
+python-rl-threat-hunting = {editable = true, ref = "7630e9582c3a81e7b1947508e6ab305544dd53aa", git = "https://github.com/reversinglabs/threat_hunting_library.git"}
 
 [dev-packages]
 
