support installing latest chrome

--- a/docker/chromium/Dockerfile
+++ b/docker/chromium/Dockerfile
@@ -18,17 +18,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 && rm -rf /var/lib/apt/lists/*
 
 # Based on instructions at: https://tecadmin.net/setup-selenium-with-chromedriver-on-debian/
-# To update the chorome and chromedriver versions first check the latest available
-# To see available versions of chrome you can run: 
-#     docker run --rm -it demisto/chromium:1.0.0.23161  bash -c 'apt-get update && apt-cache policy google-chrome-stable'
-#
+# Will install the latest version available from the chrome repo.
 # To see available chromedriver go to https://chromedriver.storage.googleapis.com/ and search for the major version
 # of chrome(for  example 91.0).
 
-# Then replace the versions in the env vars
-# Note we use only the first 3 versions. The build number we leave as *
-ENV CHROME_VERSION=92.0.4515.*
-ENV CHROMEDRIVER_VERSION=92.0.4515.107
+COPY download_chromedriver.sh .
 
 # Deps needed by google-chrome
 RUN apt-get update && apt-get -t buster-backports install -y --no-install-recommends \
@@ -41,14 +35,14 @@ RUN apt-get update && apt-get -t buster-backports install -y --no-install-recomm
   unzip \
 && curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
 && echo "deb [arch=amd64]  http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
-&& wget https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip \
+&& apt-get -y update && apt-get install -y google-chrome-stable \
+&& ./download_chromedriver.sh \
 && unzip chromedriver_linux64.zip \
 && mv chromedriver /usr/bin/chromedriver \
 && rm -rf chromedriver_linux64.zip \
+&& google-chrome --version \
+&& chromedriver --version \
 && apt-get purge -y --auto-remove \
   curl \
   unzip \
-&& apt-get -y update && apt-get install -y google-chrome-stable=${CHROME_VERSION} \
-&& google-chrome --version \
-&& chromedriver --version \
 && rm -rf /var/lib/apt/lists/*
