--- a/docker/private-gitlab-ci/Dockerfile
+++ b/docker/private-gitlab-ci/Dockerfile
@@ -4,6 +4,7 @@ RUN yum install -y curl && \
   export GOROOT=/usr/local/go && export PATH=$PATH:$GOROOT/bin && \
   curl -o go.tar.gz https://storage.googleapis.com/golang/go1.13.4.linux-amd64.tar.gz && \
   tar -C /usr/local -xzf go.tar.gz && \
-  dnf module install nodejs:10 -y
+  curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $GOROOT/bin v1.40.1 && \
+  dnf module enable nodejs:12 -y && dnf install postgresql nodejs -y
 
 CMD /bin/bash
