--- a/docker/gitlab-content-ci/Pipfile
+++ b/docker/gitlab-content-ci/Pipfile
@@ -37,7 +37,7 @@ pytest = ">=0.0.1"
 slackclient = "==2.9.3"
 CacheControl = "==0.12.5"
 GitPython = ">=0.0.1"
-pyspellchecker = ">=0.6.0"
+pyspellchecker = "==0.6.2"
 awscli = "==1.18.199"
 ansible = "==2.8.6"
 ansible-runner = "==1.4.2"
@@ -50,6 +50,8 @@ prettytable = "==0.7.2"
 boto3 = "==1.16.39"
 mock-open = "==1.4.0"
 python-gitlab = "==2.6.0"
+PyGithub = "==1.54.1"
+xmltodict = "==0.12.0"
 
 [requires]
 python_version = "3.9"
