--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -8,16 +8,16 @@ RUN apt-get install -y curl jq unzip openssh-client gcc libffi-dev libssl-dev gi
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 
 # Installing nvm, npm and node.js
-RUN export NODE_VERSION="12.18.4" \
+ENV NODE_VERSION 12.18.4
+ENV NVM_DIR /usr/local/nvm
+RUN \
     && curl https://raw.githubusercontent.com/creationix/nvm/v0.38.0/install.sh | bash \
-    && [ -s "$NVM_DIR/nvm.sh" ] \
     && . $NVM_DIR/nvm.sh \
     && nvm install $NODE_VERSION \
     && nvm alias default $NODE_VERSION \
-    && nvm use default \
-    && export NVM_DIR="$NVM_DIR" \
-    && export NODE_PATH="$NVM_DIR/v$NODE_VERSION/lib/node_modules" \
-    && export PATH="$NVM_DIR/v$NODE_VERSION/bin:$PATH"
+    && nvm use default
+ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH $NVM_DIR/v$NODE_VERSION/bin:$PATH
 
 COPY requirements.txt .
 
