--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -18,7 +18,7 @@ RUN \
     && nvm alias default $NODE_VERSION \
     && nvm use default
 
-ENV NVM_DIR $HOME/.nvm
+ENV NVM_DIR ~/.nvm
 ENV NODE_PATH $NVM_DIR/versions/node/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
