--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -11,14 +11,14 @@ RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 ENV NODE_VERSION 12.18.4
 RUN \
     curl https://raw.githubusercontent.com/creationix/nvm/v0.38.0/install.sh | bash \
-    && export NVM_DIR="$HOME/.nvm" \
+    && export NVM_DIR="/root/.nvm" \
     && export NODE_VERSION="12.18.4" \
     && . $NVM_DIR/nvm.sh \
     && nvm install $NODE_VERSION \
     && nvm alias default $NODE_VERSION \
     && nvm use default
 
-ENV NVM_DIR ~/.nvm
+ENV NVM_DIR /root/.nvm
 ENV NODE_PATH $NVM_DIR/versions/node/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
