--- a/docker/gitlab-content-ci/Pipfile
+++ b/docker/gitlab-content-ci/Pipfile
@@ -52,6 +52,7 @@ mock-open = "==1.4.0"
 python-gitlab = "==2.6.0"
 PyGithub = "==1.54.1"
 xmltodict = "==0.12.0"
+circleci = "==1.2.2"
 
 [requires]
 python_version = "3.9"
