--- a/docker/chromium/Dockerfile
+++ b/docker/chromium/Dockerfile
@@ -1,4 +1,5 @@
-FROM demisto/python3-deb:3.9.6.24019
+# Last modified: Sat, 18 Sep 2021 16:44:10 +0000
+FROM demisto/python3-deb:3.9.7.24076
 
 COPY requirements.txt .
 
