--- a/docker/lxml/Dockerfile
+++ b/docker/lxml/Dockerfile
@@ -3,6 +3,9 @@ FROM demisto/python3:3.9.7.24076
 
 COPY requirements.txt .
 
+RUN apk add --update --no-cache libxslt libxml2
+
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+  g++ gcc libxslt-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
