--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -34,4 +34,10 @@ RUN  apt-get update -y \
   && gcloud --version \
   && gsutil --version
 
-
+# Installing goenv
+RUN git clone https://github.com/syndbg/goenv.git ~/.goenv \
+    && export GOENV_ROOT="$HOME/.goenv" \
+    && export PATH="$GOENV_ROOT/bin:$PATH" \
+    && eval "$(goenv init -)"
+    && export PATH="$GOROOT/bin:$PATH" \
+    && export PATH="$PATH:$GOPATH/bin"
