--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -36,8 +36,8 @@ RUN  apt-get update -y \
 
 # Installing goenv
 RUN git clone https://github.com/syndbg/goenv.git ~/.goenv \
-    && export GOENV_ROOT="$HOME/.goenv" \
-    && export PATH="$GOENV_ROOT/bin:$PATH" \
-    && eval "$(goenv init -)"
-    && export PATH="$GOROOT/bin:$PATH" \
-    && export PATH="$PATH:$GOPATH/bin"
+  && export GOENV_ROOT="$HOME/.goenv" \
+  && export PATH="$GOENV_ROOT/bin:$PATH" \
+  && eval "$(goenv init -)" \
+  && export PATH="$GOROOT/bin:$PATH" \
+  && export PATH="$PATH:$GOPATH/bin"
