--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -40,4 +40,7 @@ RUN git clone https://github.com/syndbg/goenv.git ~/.goenv \
   && echo 'export PATH="$GOENV_ROOT/bin:$PATH"' >> ~/.bashrc \
   && echo 'eval "$(goenv init -)"' >> ~/.bashrc \
   && echo 'export PATH="$GOROOT/bin:$PATH"' >> ~/.bashrc \
-  && echo 'export PATH="$PATH:$GOPATH/bin"' >> ~/.bashrc
+  && echo 'export PATH="$PATH:$GOPATH/bin"' >> ~/.bashrc \
+  && source ~/.bashrc \
+  && goenv install 1.13.8 \
+  && goenv global 1.13.8
