--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -43,4 +43,6 @@ RUN git clone https://github.com/syndbg/goenv.git ~/.goenv \
   && echo 'export PATH="$PATH:$GOPATH/bin"' >> ~/.bashrc \
   && source ~/.bashrc \
   && goenv install 1.13.8 \
-  && goenv global 1.13.8
+  && goenv global 1.13.8 \
+  && source ~/.bashrc \
+  && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
